# z-image-world

./: .gitignore  AGENTS.md  CLAUDE_SESSION_NOTES.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: model_config.yaml  training_config.yaml
data/: __init__.py  action_dataset.py  preprocess.py
demo/: __init__.py  interactive_app.py  zimage_demo.py
inference/: __init__.py  fifo_pipeline.py  input_handler.py  realtime_pipeline.py  zimage_world_pipeline.py
models/: __init__.py  action_encoder.py  causal_dit.py  quantization.py  stream_vae.py  weight_transfer.py  zimage_world_model.py
patches/: apply_patches.sh
posts/: 001_zimage_world_model_foundation.md  002_codex_review.md  003_training_inference_complete.md  004_training_and_demo.md  005_flow_matching_and_evaluation.md  005_poc_diagnosis_and_experiments.md  006_project_completion.md  007_training_started.md  008_temporal_layers_learning.md  009_stage1_training_complete.md  010_fifo_diffusion_pipeline.md  011_richer_training_data_and_cfg.md  012_stage2_training_gamefactory.md  013_stage2_action_analysis.md  014_stage3_training_fixes.md  015_stage3c_success.md
report/: main.tex  references.bib
scripts/: analyze_stage3_checkpoint.py  benchmark.py  check_checkpoint.py  debug_denoising.py  eval_fast.py  evaluate.py  evaluate_stage3c.sh  evaluate_temporal.py  generate_action_synthetic.py  generate_rich_synthetic.py  inference_world_model.py  inference_zimage_world.py  inspect_zimage.py  launch_stage3b.sh  launch_stage3d.sh  measure_action_responsiveness.py  post_stage3c_eval.sh  prepare_data.py  (+16 more)
(+20 files in other folders)
